Fixed bug #47273 (Encoding bug in SoapServer->fault)